// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Button renders text in primary variant md size 1`] = `
{
  "children": [
    {
      "children": [
        "Maç oluştur",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[14.5px] text-on-lime",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "Maç oluştur",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": undefined,
    },
    "className": "flex-row items-center justify-center gap-2 bg-lime border-base border-border-strong h-11 px-4 rounded-pill",
    "disabled": undefined,
    "onPress": "[Function]",
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button renders disabled state 1`] = `
{
  "children": [
    {
      "children": [
        "Disabled",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[14.5px] text-on-lime",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "Disabled",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": true,
    },
    "className": "flex-row items-center justify-center gap-2 bg-lime border-base border-border-strong h-11 px-4 rounded-pill opacity-50",
    "disabled": true,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button renders loading state with ActivityIndicator 1`] = `
{
  "children": [
    {
      "children": [],
      "props": {
        "color": "#161618",
        "size": "small",
      },
      "type": "ActivityIndicator",
    },
    {
      "children": [
        "Yükleniyor",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[14.5px] text-on-lime",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "Yükleniyor",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": true,
      "disabled": true,
    },
    "className": "flex-row items-center justify-center gap-2 bg-lime border-base border-border-strong h-11 px-4 rounded-pill opacity-50",
    "disabled": true,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button renders primary variant 1`] = `
{
  "children": [
    {
      "children": [
        "primary",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[14.5px] text-on-lime",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "primary",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": undefined,
    },
    "className": "flex-row items-center justify-center gap-2 bg-lime border-base border-border-strong h-11 px-4 rounded-pill",
    "disabled": undefined,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button renders secondary variant 1`] = `
{
  "children": [
    {
      "children": [
        "secondary",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[14.5px] text-text",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "secondary",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": undefined,
    },
    "className": "flex-row items-center justify-center gap-2 bg-surface border-base border-border-strong h-11 px-4 rounded-pill",
    "disabled": undefined,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button renders danger variant 1`] = `
{
  "children": [
    {
      "children": [
        "danger",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[14.5px] text-white",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "danger",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": undefined,
    },
    "className": "flex-row items-center justify-center gap-2 bg-loss border-base border-border-strong h-11 px-4 rounded-pill",
    "disabled": undefined,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button renders dark variant 1`] = `
{
  "children": [
    {
      "children": [
        "dark",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[14.5px] text-white",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "dark",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": undefined,
    },
    "className": "flex-row items-center justify-center gap-2 bg-clay border-base border-border-strong h-11 px-4 rounded-pill",
    "disabled": undefined,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button renders ghost variant 1`] = `
{
  "children": [
    {
      "children": [
        "ghost",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[14.5px] text-text",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "ghost",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": undefined,
    },
    "className": "flex-row items-center justify-center gap-2 bg-transparent border-0 h-11 px-4 rounded-pill",
    "disabled": undefined,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button renders tonal variant 1`] = `
{
  "children": [
    {
      "children": [
        "tonal",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[14.5px] text-text-2",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "tonal",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": undefined,
    },
    "className": "flex-row items-center justify-center gap-2 bg-surface-2 border-0 h-11 px-4 rounded-pill",
    "disabled": undefined,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button renders sm size 1`] = `
{
  "children": [
    {
      "children": [
        "sm",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[13px] text-on-lime",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "sm",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": undefined,
    },
    "className": "flex-row items-center justify-center gap-2 bg-lime border-base border-border-strong h-9 px-3 rounded-pill",
    "disabled": undefined,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button renders md size 1`] = `
{
  "children": [
    {
      "children": [
        "md",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[14.5px] text-on-lime",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "md",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": undefined,
    },
    "className": "flex-row items-center justify-center gap-2 bg-lime border-base border-border-strong h-11 px-4 rounded-pill",
    "disabled": undefined,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button renders lg size 1`] = `
{
  "children": [
    {
      "children": [
        "lg",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[15.5px] text-on-lime",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "lg",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": undefined,
    },
    "className": "flex-row items-center justify-center gap-2 bg-lime border-base border-border-strong h-14 px-5 rounded-pill",
    "disabled": undefined,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button full width prop applies w-full 1`] = `
{
  "children": [
    {
      "children": [
        "Full",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[14.5px] text-on-lime",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "Full",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": undefined,
    },
    "className": "flex-row items-center justify-center gap-2 bg-lime border-base border-border-strong h-11 px-4 rounded-pill w-full",
    "disabled": undefined,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;

exports[`Button arrow prop renders the chevron after children 1`] = `
{
  "children": [
    {
      "children": [
        "İleri",
      ],
      "props": {
        "adjustsFontSizeToFit": true,
        "className": "font-display font-extrabold text-[14.5px] text-on-lime",
        "minimumFontScale": 0.75,
        "numberOfLines": 1,
      },
      "type": "Text",
    },
    {
      "children": [
        "›",
      ],
      "props": {
        "className": "text-on-lime text-[14.5px]",
      },
      "type": "Text",
    },
  ],
  "props": {
    "accessibilityLabel": "İleri",
    "accessibilityRole": "button",
    "accessibilityState": {
      "busy": undefined,
      "disabled": undefined,
    },
    "className": "flex-row items-center justify-center gap-2 bg-lime border-base border-border-strong h-11 px-4 rounded-pill",
    "disabled": undefined,
    "onPress": undefined,
    "onPressIn": [Function],
    "onPressOut": [Function],
    "style": {
      "transform": [
        {
          "scale": 1,
        },
      ],
    },
  },
  "type": "Animated.View",
}
`;
